@@ -1,7 +1,6 @@
 //package test;
 //
-//import main.Operation;
-//import main.StringFunifier;
+//import main.*;
 //import org.junit.jupiter.api.Assertions;
 //import org.junit.jupiter.api.Test;
 //
@@ -17,14 +16,23 @@
 //
 //
 //        String boringString = "ccchHJKkklmlmmml";
-//        List<Operation> funnyOperations = Arrays.asList("REVERSE", "UPPERCASE", "LOWERCASE", "SORT", "COMPRESSION", "REVERSE");
-//        int[] starttrialIndexes = {0, 2, 5, 7, 10, 12};
-//        int[] endIndexes = {2, 3, 5, 9, 11, 13};
+//
+//        List<Operation> funnyOperations = new ArrayList<>(List.of(
+//                new Lower(new Reverse(new Base())),
+//                new Reverse(new Base()),
+//                new Reverse(new Base()),
+//                new Reverse(new Upper(new Lower(new Base()))),
+//                new Upper(new Lower(new Reverse(new Compress(new Base()))))
+//        ));
+//
+//        List<Integer> startIndexes = new ArrayList<>(List.of(1 , 5 , 7 , 11 , 13));
+//        List<Integer> endIndexes = new ArrayList<>(List.of(3 , 5 , 10 , 12 , 14));
 //
 //
-//        StringFunifier testvariable = new StringFunifier(boringString, starttrialIndexes, endIndexes, funnyOpeartions);
 //
-//        Assertions.assertEquals("c(cch)H(J)K(kklm)(lm)(mm)l", testvariable.getFunnyString());
+//        StringFunifier testVariable = new StringFunifier(boringString, startIndexes, endIndexes, funnyOperations);
+//
+//        Assertions.assertEquals("c(hcc)H(J)K(mlkk)(ML)(2M)l", testVariable.getFunnyString());
 //    }
 //
 //}
